2012-12-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.*, gamewin.cc, npctime.cc, objs/egg.cc, usecode/intrinsics.cc:
	  Party members no longer heal to full if knocked out when they cache out.
	  UI_clear_item_flag no longer awakens unconscious NPCs (matches original in
	  e.g., BG usecode 0x6bc). Fire fields no longer awaken knocked out NPCs.
	  Mana no longer regenerates quickly for knocked out NPCs. Trying new dead
	  body positioning method. Fixed last commit to not randomly remove the
	  avatar's target.

2012-12-30	Malignant Manor <malignantmanor@users.sourceforge.net>
	Rev 7246:
	* actors.cc, combat.cc: Have the Avatar stop attacking unconscious actors
	Rev 7248:
	* defaultkeys.txt: Fix description of walk keys
	Rev 7249:
	* gamewin.cc: Save/load combat state
	Rev 7250:
	* Fix changelog

2012-12-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc, keyactions.*, keys.*: Walking and running keys no longer count
	  for the purposes of skipping faces, maps and such, as they could prevent
	  someone from ever seeing the face. Also, enforcing const-ness in KeyBinder
	  class and on key actions.
	Rev 7245:
	* actors.*, gamewin.cc, npctime.cc: Fixed bug #3598886 "HP < 1 should regen
	  faster than per hour".
	Rev 7251
	* data/Makefile.am: Making the expack-generated header files exult_bg_flx.h,
	  data/exult_flx.h, data/exult_iphone_flx.h and data/exult_si_flx.h depend
	  on their respective flex files.


2012-12-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapeid.h, shapes/vgafile.*, usecode/conversation.cc: Fixed bug #3001914:
	  "Cutted texts in voiceovers with Speech disabled" [sic] for the guardian
	  in BG. Also, fill whole game area with background color from large faces
	  so SI guardian and serpents cover the whole screen.
	* usecode/conversation.h: Spacing.
	Rev 7241:
	* usecode/conversation.cc: Center BG guardian vertically too.
	* actors.cc: Fixed bug #3186728 "SI: Incorrect property flags? (1.5.0svn)"